@@ -13,6 +13,10 @@
 		<blockquote>
 			<ul>
 				<li>
+					Serious regression fixed: Since 1.02, updating sliders was abysmally
+					expensive and could disturb the refreshing of other elements
+				</li>
+				<li>
 					config.h, config, Makefiles: Some Mac OS X support added
 				</li>
 				<li>
